--- a/GE.ipynb
+++ b/GE.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:07:54.212206Z",
-     "start_time": "2020-10-26T21:07:53.864919Z"
+     "end_time": "2020-10-26T21:35:14.029689Z",
+     "start_time": "2020-10-26T21:35:13.923821Z"
     }
    },
    "outputs": [],
@@ -34,8 +34,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:07:54.489453Z",
-     "start_time": "2020-10-26T21:07:54.472050Z"
+     "end_time": "2020-10-26T21:35:17.402897Z",
+     "start_time": "2020-10-26T21:35:17.386494Z"
     }
    },
    "outputs": [],
@@ -105,8 +105,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:07:55.159491Z",
-     "start_time": "2020-10-26T21:07:55.047301Z"
+     "end_time": "2020-10-26T21:35:18.177722Z",
+     "start_time": "2020-10-26T21:35:18.082660Z"
     }
    },
    "outputs": [],
@@ -129,8 +129,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:07:55.537726Z",
-     "start_time": "2020-10-26T21:07:55.526925Z"
+     "end_time": "2020-10-26T21:35:19.805838Z",
+     "start_time": "2020-10-26T21:35:19.798257Z"
     }
    },
    "outputs": [],
@@ -164,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:09:23.709023Z",
-     "start_time": "2020-10-26T21:09:23.691848Z"
+     "end_time": "2020-10-26T21:48:50.354679Z",
+     "start_time": "2020-10-26T21:48:50.336194Z"
     }
    },
    "outputs": [],
@@ -218,7 +218,7 @@
     "        for mutant in offspring:\n",
     "\n",
     "            # mutate an individual with probability\n",
-    "            if np.random.random() < 0.2:\n",
+    "            if np.random.random() < 0.3:\n",
     "                toolbox.mutate(mutant[0][0])\n",
     "                del mutant.fitness.values\n",
     "    \n",
@@ -260,11 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:09:26.295384Z",
-     "start_time": "2020-10-26T21:09:24.322277Z"
+     "end_time": "2020-10-26T21:48:52.387013Z",
+     "start_time": "2020-10-26T21:48:50.843828Z"
     }
    },
    "outputs": [
@@ -274,45 +274,33 @@
      "text": [
       "Start of evolution\n",
       "Population metrics\n",
-      "Mean f_beta: 0.09314179796107508\n",
-      "Std 0.0032437442075995983\n",
+      "Mean f_beta: 0.32724745134383687\n",
+      "Std 0.3590803160161765\n",
       "Population metrics\n",
-      "Mean f_beta: 0.09314179796107508\n",
-      "Std 0.0032437442075995983\n",
+      "Mean f_beta: 0.48915662650602415\n",
+      "Std 0.39507442402535337\n",
       "Population metrics\n",
-      "Mean f_beta: 0.09443929564411492\n",
-      "Std 0.0029729406732798367\n",
+      "Mean f_beta: 0.8823911028730306\n",
+      "Std 0.011444563614853966\n",
       "Population metrics\n",
-      "Mean f_beta: 0.09249304911955517\n",
-      "Std 0.0031782072658905233\n",
+      "Mean f_beta: 0.8863762743280816\n",
+      "Std 0.010809655838232268\n",
       "Population metrics\n",
-      "Mean f_beta: 0.0916589434661724\n",
-      "Std 0.0027320487438333542\n",
+      "Mean f_beta: 0.8906394810009269\n",
+      "Std 0.01609512018245127\n",
       "Population metrics\n",
-      "Mean f_beta: 0.09249304911955517\n",
-      "Std 0.0031782072658905233\n",
+      "Mean f_beta: 0.8096385542168674\n",
+      "Std 0.2702656140937915\n",
       "Population metrics\n",
-      "Mean f_beta: 0.09443929564411493\n",
-      "Std 0.0029729406732795453\n",
-      "Population metrics\n",
-      "Mean f_beta: 0.09573679332715476\n",
-      "Std 0.0019462465245600085\n",
-      "Population metrics\n",
-      "Mean f_beta: 0.16672845227062094\n",
-      "Std 0.2539552195655446\n",
-      "Population metrics\n",
-      "Mean f_beta: 0.4109360518999073\n",
-      "Std 0.4103418869458054\n",
-      "Population metrics\n",
-      "Mean f_beta: 0.8359592215013902\n",
-      "Std 0.24735100866632487\n",
+      "Mean f_beta: 0.9118628359592215\n",
+      "Std 0.01835617435141913\n",
       "Evolution done\n",
-      "Best individual has f1 score = (0.9240037071362373,) with: \n",
+      "Best individual has f1 score = (0.9416126042632067,) with: \n",
       "\n",
-      "n_estimators = 10.0 \n",
+      "n_estimators = 8.0 \n",
       "ccp = 0.0 \n",
-      "max_depth = 6.0 \n",
-      "min_split = 8.0\n"
+      "max_depth = 10.0 \n",
+      "min_split = 7.0\n"
      ]
     },
     {
@@ -333,24 +321,16 @@
           4,
           5,
           6,
-          7,
-          8,
-          9,
-          10,
-          11
+          7
          ],
          "y": [
-          0.09314179796107508,
-          0.09314179796107508,
-          0.09443929564411492,
-          0.09249304911955517,
-          0.0916589434661724,
-          0.09249304911955517,
-          0.09443929564411493,
-          0.09573679332715476,
-          0.16672845227062094,
-          0.4109360518999073,
-          0.8359592215013902
+          0.32724745134383687,
+          0.48915662650602415,
+          0.8823911028730306,
+          0.8863762743280816,
+          0.8906394810009269,
+          0.8096385542168674,
+          0.9118628359592215
          ]
         }
        ],
@@ -1176,20 +1156,20 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"ccf544ac-4283-4fda-8f89-0aecc533db9a\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"956fad76-1cec-4773-b6b9-cc35c0a4f68a\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    \n",
-       "                if (document.getElementById(\"ccf544ac-4283-4fda-8f89-0aecc533db9a\")) {\n",
+       "                if (document.getElementById(\"956fad76-1cec-4773-b6b9-cc35c0a4f68a\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        'ccf544ac-4283-4fda-8f89-0aecc533db9a',\n",
-       "                        [{\"mode\": \"lines+markers\", \"name\": \"f_beta score across generations\", \"type\": \"scatter\", \"x\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], \"y\": [0.09314179796107508, 0.09314179796107508, 0.09443929564411492, 0.09249304911955517, 0.0916589434661724, 0.09249304911955517, 0.09443929564411493, 0.09573679332715476, 0.16672845227062094, 0.4109360518999073, 0.8359592215013902]}],\n",
+       "                        '956fad76-1cec-4773-b6b9-cc35c0a4f68a',\n",
+       "                        [{\"mode\": \"lines+markers\", \"name\": \"f_beta score across generations\", \"type\": \"scatter\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.32724745134383687, 0.48915662650602415, 0.8823911028730306, 0.8863762743280816, 0.8906394810009269, 0.8096385542168674, 0.9118628359592215]}],\n",
        "                        {\"template\": {\"data\": {\"bar\": [{\"error_x\": {\"color\": \"#2a3f5f\"}, \"error_y\": {\"color\": \"#2a3f5f\"}, \"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"bar\"}], \"barpolar\": [{\"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"barpolar\"}], \"carpet\": [{\"aaxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"baxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"type\": \"carpet\"}], \"choropleth\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"choropleth\"}], \"contour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"contour\"}], \"contourcarpet\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"contourcarpet\"}], \"heatmap\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmap\"}], \"heatmapgl\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmapgl\"}], \"histogram\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"histogram\"}], \"histogram2d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2d\"}], \"histogram2dcontour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2dcontour\"}], \"mesh3d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"mesh3d\"}], \"parcoords\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"parcoords\"}], \"pie\": [{\"automargin\": true, \"type\": \"pie\"}], \"scatter\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter\"}], \"scatter3d\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter3d\"}], \"scattercarpet\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattercarpet\"}], \"scattergeo\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergeo\"}], \"scattergl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergl\"}], \"scattermapbox\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattermapbox\"}], \"scatterpolar\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolar\"}], \"scatterpolargl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolargl\"}], \"scatterternary\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterternary\"}], \"surface\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"surface\"}], \"table\": [{\"cells\": {\"fill\": {\"color\": \"#EBF0F8\"}, \"line\": {\"color\": \"white\"}}, \"header\": {\"fill\": {\"color\": \"#C8D4E3\"}, \"line\": {\"color\": \"white\"}}, \"type\": \"table\"}]}, \"layout\": {\"annotationdefaults\": {\"arrowcolor\": \"#2a3f5f\", \"arrowhead\": 0, \"arrowwidth\": 1}, \"coloraxis\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"colorscale\": {\"diverging\": [[0, \"#8e0152\"], [0.1, \"#c51b7d\"], [0.2, \"#de77ae\"], [0.3, \"#f1b6da\"], [0.4, \"#fde0ef\"], [0.5, \"#f7f7f7\"], [0.6, \"#e6f5d0\"], [0.7, \"#b8e186\"], [0.8, \"#7fbc41\"], [0.9, \"#4d9221\"], [1, \"#276419\"]], \"sequential\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"sequentialminus\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]]}, \"colorway\": [\"#636efa\", \"#EF553B\", \"#00cc96\", \"#ab63fa\", \"#FFA15A\", \"#19d3f3\", \"#FF6692\", \"#B6E880\", \"#FF97FF\", \"#FECB52\"], \"font\": {\"color\": \"#2a3f5f\"}, \"geo\": {\"bgcolor\": \"white\", \"lakecolor\": \"white\", \"landcolor\": \"#E5ECF6\", \"showlakes\": true, \"showland\": true, \"subunitcolor\": \"white\"}, \"hoverlabel\": {\"align\": \"left\"}, \"hovermode\": \"closest\", \"mapbox\": {\"style\": \"light\"}, \"paper_bgcolor\": \"white\", \"plot_bgcolor\": \"#E5ECF6\", \"polar\": {\"angularaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"radialaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"scene\": {\"xaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"yaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"zaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}}, \"shapedefaults\": {\"line\": {\"color\": \"#2a3f5f\"}}, \"ternary\": {\"aaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"baxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"caxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"title\": {\"x\": 0.05}, \"xaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}, \"yaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}}}, \"xaxis\": {\"title\": {\"text\": \"Generation number\"}}, \"yaxis\": {\"title\": {\"text\": \"Mean f-1 score across population\"}}},\n",
        "                        {\"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('ccf544ac-4283-4fda-8f89-0aecc533db9a');\n",
+       "var gd = document.getElementById('956fad76-1cec-4773-b6b9-cc35c0a4f68a');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -1224,7 +1204,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    logs = evolution(number_of_generations=100, threshold=0.80)\n",
+    "    logs = evolution(number_of_generations=100, threshold=0.90)\n",
     "    create_plot(logs)"
    ]
   }
