--- a/GE.ipynb
+++ b/GE.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:35:14.029689Z",
-     "start_time": "2020-10-26T21:35:13.923821Z"
+     "end_time": "2020-11-08T09:13:36.839717Z",
+     "start_time": "2020-11-08T09:13:36.183417Z"
     }
    },
    "outputs": [],
@@ -34,8 +34,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:35:17.402897Z",
-     "start_time": "2020-10-26T21:35:17.386494Z"
+     "end_time": "2020-11-08T09:13:42.696792Z",
+     "start_time": "2020-11-08T09:13:42.670446Z"
     }
    },
    "outputs": [],
@@ -105,8 +105,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:35:18.177722Z",
-     "start_time": "2020-10-26T21:35:18.082660Z"
+     "end_time": "2020-11-08T09:13:43.693146Z",
+     "start_time": "2020-11-08T09:13:43.596678Z"
     }
    },
    "outputs": [],
@@ -126,14 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:35:19.805838Z",
-     "start_time": "2020-10-26T21:35:19.798257Z"
+     "end_time": "2020-11-08T09:14:24.773997Z",
+     "start_time": "2020-11-08T09:14:24.761605Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jan/anaconda3/lib/python3.7/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMax' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/home/jan/anaconda3/lib/python3.7/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
     "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
@@ -159,7 +170,7 @@
     "# operator for selecting individuals for breeding the next generation.\n",
     "# tournsize is the number of individuals participating in each tournament.\n",
     "\n",
-    "toolbox.register(\"select\", tools.selTournament, tournsize=4)"
+    "toolbox.register(\"select\", tools.selTournament, tournsize=5)"
    ]
   },
   {
@@ -167,8 +178,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:48:50.354679Z",
-     "start_time": "2020-10-26T21:48:50.336194Z"
+     "end_time": "2020-11-08T09:45:08.598733Z",
+     "start_time": "2020-11-08T09:45:08.582120Z"
     }
    },
    "outputs": [],
@@ -207,7 +218,7 @@
     "        for child1, child2 in zip(offspring[::2], offspring[1::2]):\n",
     "            \n",
     "            # cross two individuals with probability\n",
-    "            if np.random.random() < 0.4:\n",
+    "            if np.random.random() < .3:\n",
     "                toolbox.mate(child1[0][0], child1[0][0])\n",
     "                # fitness values of the children\n",
     "                # must be recalculated later\n",
@@ -218,7 +229,7 @@
     "        for mutant in offspring:\n",
     "\n",
     "            # mutate an individual with probability\n",
-    "            if np.random.random() < 0.3:\n",
+    "            if np.random.random() < .15:\n",
     "                toolbox.mutate(mutant[0][0])\n",
     "                del mutant.fitness.values\n",
     "    \n",
@@ -263,8 +274,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-26T21:48:52.387013Z",
-     "start_time": "2020-10-26T21:48:50.843828Z"
+     "end_time": "2020-11-08T09:45:11.551211Z",
+     "start_time": "2020-11-08T09:45:08.887631Z"
     }
    },
    "outputs": [
@@ -274,33 +285,27 @@
      "text": [
       "Start of evolution\n",
       "Population metrics\n",
-      "Mean f_beta: 0.32724745134383687\n",
-      "Std 0.3590803160161765\n",
+      "Mean f_beta: 0.5315106580166821\n",
+      "Std 0.3627713271436582\n",
       "Population metrics\n",
-      "Mean f_beta: 0.48915662650602415\n",
-      "Std 0.39507442402535337\n",
+      "Mean f_beta: 0.7219647822057461\n",
+      "Std 0.33762146704416957\n",
       "Population metrics\n",
-      "Mean f_beta: 0.8823911028730306\n",
-      "Std 0.011444563614853966\n",
+      "Mean f_beta: 0.7170528266913809\n",
+      "Std 0.3585717943834479\n",
       "Population metrics\n",
-      "Mean f_beta: 0.8863762743280816\n",
-      "Std 0.010809655838232268\n",
+      "Mean f_beta: 0.8989805375347544\n",
+      "Std 0.004144704314205607\n",
       "Population metrics\n",
-      "Mean f_beta: 0.8906394810009269\n",
-      "Std 0.01609512018245127\n",
-      "Population metrics\n",
-      "Mean f_beta: 0.8096385542168674\n",
-      "Std 0.2702656140937915\n",
-      "Population metrics\n",
-      "Mean f_beta: 0.9118628359592215\n",
-      "Std 0.01835617435141913\n",
+      "Mean f_beta: 0.9018535681186284\n",
+      "Std 0.003941829530694489\n",
       "Evolution done\n",
-      "Best individual has f1 score = (0.9416126042632067,) with: \n",
+      "Best individual has f1 score = (0.9110287303058388,) with: \n",
       "\n",
-      "n_estimators = 8.0 \n",
-      "ccp = 0.0 \n",
-      "max_depth = 10.0 \n",
-      "min_split = 7.0\n"
+      "n_estimators = 44.0 \n",
+      "ccp = 0.02224223029315131 \n",
+      "max_depth = 13.0 \n",
+      "min_split = 6.0\n"
      ]
     },
     {
@@ -319,18 +324,14 @@
           2,
           3,
           4,
-          5,
-          6,
-          7
+          5
          ],
          "y": [
-          0.32724745134383687,
-          0.48915662650602415,
-          0.8823911028730306,
-          0.8863762743280816,
-          0.8906394810009269,
-          0.8096385542168674,
-          0.9118628359592215
+          0.5315106580166821,
+          0.7219647822057461,
+          0.7170528266913809,
+          0.8989805375347544,
+          0.9018535681186284
          ]
         }
        ],
@@ -1156,20 +1157,20 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"956fad76-1cec-4773-b6b9-cc35c0a4f68a\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"741084c5-3adc-48a2-a3cd-277334783f24\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    \n",
-       "                if (document.getElementById(\"956fad76-1cec-4773-b6b9-cc35c0a4f68a\")) {\n",
+       "                if (document.getElementById(\"741084c5-3adc-48a2-a3cd-277334783f24\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '956fad76-1cec-4773-b6b9-cc35c0a4f68a',\n",
-       "                        [{\"mode\": \"lines+markers\", \"name\": \"f_beta score across generations\", \"type\": \"scatter\", \"x\": [1, 2, 3, 4, 5, 6, 7], \"y\": [0.32724745134383687, 0.48915662650602415, 0.8823911028730306, 0.8863762743280816, 0.8906394810009269, 0.8096385542168674, 0.9118628359592215]}],\n",
+       "                        '741084c5-3adc-48a2-a3cd-277334783f24',\n",
+       "                        [{\"mode\": \"lines+markers\", \"name\": \"f_beta score across generations\", \"type\": \"scatter\", \"x\": [1, 2, 3, 4, 5], \"y\": [0.5315106580166821, 0.7219647822057461, 0.7170528266913809, 0.8989805375347544, 0.9018535681186284]}],\n",
        "                        {\"template\": {\"data\": {\"bar\": [{\"error_x\": {\"color\": \"#2a3f5f\"}, \"error_y\": {\"color\": \"#2a3f5f\"}, \"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"bar\"}], \"barpolar\": [{\"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"barpolar\"}], \"carpet\": [{\"aaxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"baxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"type\": \"carpet\"}], \"choropleth\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"choropleth\"}], \"contour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"contour\"}], \"contourcarpet\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"contourcarpet\"}], \"heatmap\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmap\"}], \"heatmapgl\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmapgl\"}], \"histogram\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"histogram\"}], \"histogram2d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2d\"}], \"histogram2dcontour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2dcontour\"}], \"mesh3d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"mesh3d\"}], \"parcoords\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"parcoords\"}], \"pie\": [{\"automargin\": true, \"type\": \"pie\"}], \"scatter\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter\"}], \"scatter3d\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter3d\"}], \"scattercarpet\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattercarpet\"}], \"scattergeo\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergeo\"}], \"scattergl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergl\"}], \"scattermapbox\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattermapbox\"}], \"scatterpolar\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolar\"}], \"scatterpolargl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolargl\"}], \"scatterternary\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterternary\"}], \"surface\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"surface\"}], \"table\": [{\"cells\": {\"fill\": {\"color\": \"#EBF0F8\"}, \"line\": {\"color\": \"white\"}}, \"header\": {\"fill\": {\"color\": \"#C8D4E3\"}, \"line\": {\"color\": \"white\"}}, \"type\": \"table\"}]}, \"layout\": {\"annotationdefaults\": {\"arrowcolor\": \"#2a3f5f\", \"arrowhead\": 0, \"arrowwidth\": 1}, \"coloraxis\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"colorscale\": {\"diverging\": [[0, \"#8e0152\"], [0.1, \"#c51b7d\"], [0.2, \"#de77ae\"], [0.3, \"#f1b6da\"], [0.4, \"#fde0ef\"], [0.5, \"#f7f7f7\"], [0.6, \"#e6f5d0\"], [0.7, \"#b8e186\"], [0.8, \"#7fbc41\"], [0.9, \"#4d9221\"], [1, \"#276419\"]], \"sequential\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"sequentialminus\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]]}, \"colorway\": [\"#636efa\", \"#EF553B\", \"#00cc96\", \"#ab63fa\", \"#FFA15A\", \"#19d3f3\", \"#FF6692\", \"#B6E880\", \"#FF97FF\", \"#FECB52\"], \"font\": {\"color\": \"#2a3f5f\"}, \"geo\": {\"bgcolor\": \"white\", \"lakecolor\": \"white\", \"landcolor\": \"#E5ECF6\", \"showlakes\": true, \"showland\": true, \"subunitcolor\": \"white\"}, \"hoverlabel\": {\"align\": \"left\"}, \"hovermode\": \"closest\", \"mapbox\": {\"style\": \"light\"}, \"paper_bgcolor\": \"white\", \"plot_bgcolor\": \"#E5ECF6\", \"polar\": {\"angularaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"radialaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"scene\": {\"xaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"yaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"zaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}}, \"shapedefaults\": {\"line\": {\"color\": \"#2a3f5f\"}}, \"ternary\": {\"aaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"baxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"caxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"title\": {\"x\": 0.05}, \"xaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}, \"yaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}}}, \"xaxis\": {\"title\": {\"text\": \"Generation number\"}}, \"yaxis\": {\"title\": {\"text\": \"Mean f-1 score across population\"}}},\n",
        "                        {\"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('956fad76-1cec-4773-b6b9-cc35c0a4f68a');\n",
+       "var gd = document.getElementById('741084c5-3adc-48a2-a3cd-277334783f24');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -1207,6 +1208,13 @@
     "    logs = evolution(number_of_generations=100, threshold=0.90)\n",
     "    create_plot(logs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
